# AIA_Practica3

./: .gitignore  README.md  main.py  pyproject.toml
utils/: __init__.py
utils/bounding_boxes/: F_Bounding_Boxes_Creator.py  F_YOLO_Model.py
utils/classifiers/: F_CNN_Classifier.py  F_Classifier_Manager.py  F_ResNet_Classifier.py
utils/downloader/: F_Data_Downloader.py
utils/loaders/: F_Fetal_Ultrasound_Dataloader.py  F_Fetal_Ultrasound_Dataset.py
utils/metrics/: F_Metrics_Generator.py
utils/splitter/: F_Data_Splitter.py
